--- a/teleportation/index.html
+++ b/teleportation/index.html
@@ -5,36 +5,28 @@
     <title>teleportation</title>
     <meta name ="description" content="Téléportation - A-Frame">
     <script src="https://aframe.io/releases/0.7.0/aframe.min.js"></script>
-    <script src="https://unpkg.com/aframe-teleport-controls@0.2.x/dist/aframe-teleport-controls.min.js"></script>
-    <script src="https://rawgit.com/caseyyee/aframe-ui-widgets/master/dist/ui-widgets.min.js"></script>
+    <script src="https://unpkg.com/aframe-teleport-controls@0.2.0/dist/aframe-teleport-controls.min.js"></script>
+    <script src="components/random-color.js"></script>
   </head>
   <body>
     <a-scene stats>
       <a-assets>
         <a-mixin id="beveled-square" geometry="primitive: cone; radiusTop: 0.15; radiusBottom: 0.19; height: 0.02; segmentsRadial: 4; segmentsHeight: 1" rotation="0 45 0"></a-mixin>
-        <a-mixin id="square" geometry="primitive: box; width: 0.18; height: 0.025; depth: 0.18;" position="0 0.02 0"></a-mixin>
-        <a-mixin id="blue" material="color: #1E2768;"></a-mixin>
-        <a-mixin id="darkgreen" material="color: #22FF90;"></a-mixin>
-        <a-mixin id="yellow" material="color: #FFF88E;"></a-mixin>
-        <a-mixin id="offset" position="0 0.01 0"></a-mixin>
+        <img id="sol" src="https://cdn.aframe.io/a-painter/images/floor.jpg">
+        <img id="skyTexture" src="https://cdn.aframe.io/a-painter/images/sky.jpg">
       </a-assets>
 
       <!-- Mains-->
       <a-entity id="teleHand" hand-controls="left" teleport-controls></a-entity>
       <a-entity id="normalHand" hand-controls="right"></a-entity>
 
-      <!-- Adds UI button widget -->
-      <a-entity id="button" ui-button="base: beveled-square, blue; top: square, darkgreen; pressed: yellow, offset"></a-entity>
-      <a-entity id="mybutton" ui-rotary="base: beveled-square, blue; top: square, darkgreen; pressed: yellow, offset"></a-entity>
+      <a-entity geometry="primitive: box; depth: 0.5; height: 0.5; width :0.5"
+                material="color: red; shader: standard"></a-entity>
 
-      <a-sky color="blue"></a-sky>
-      <a-cylinder radius="30" height="1" color="green"></a-cylinder>
+      <a-sky id="fondArriere" theta-length="90" radius="30" src="#skyTexture"></a-sky>
+      <a-cylinder radius="10" height="0.1" id="leSol" src="#sol"></a-cylinder>
 
       <script>
-        var mybutton = document.querySelector('#mybutton');
-        mybutton.addEventListener('pressed', function () {
-          // do stuff here.
-        });
       </script>
 
   </body>
