--- a/teleportation/index.html
+++ b/teleportation/index.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>teleportation</title>
-    <meta name ="description" content="Téléportation - A-Frame">
+    <title>Teleportation et pose de cube</title>
+    <meta name ="description" content="Téléportation + Block - A-Frame">
     <script src="https://aframe.io/releases/0.7.0/aframe.min.js"></script>
     <script src="https://unpkg.com/aframe-teleport-controls@0.2.0/dist/aframe-teleport-controls.min.js"></script>
     <script src="https://unpkg.com/aframe-controller-cursor-component@0.2.7/dist/aframe-controller-cursor-component.min.js"></script>
