Ajout de la fermeture de la balise <a-scene>

--- a/teleportation/index.html
+++ b/teleportation/index.html
@@ -45,6 +45,6 @@
       <a-camera>
         <a-cursor intersection-spawn="event: click; mixin: voxel"></a-cursor>
       </a-camera>
-
+    </a-scene>
   </body>
 </html>
