--- a/levier/index.html
+++ b/levier/index.html
@@ -7,6 +7,8 @@
     <script src="https://aframe.io/releases/0.7.0/aframe.min.js"></script>
     <script src="https://unpkg.com/aframe-teleport-controls@0.2.0/dist/aframe-teleport-controls.min.js"></script>
     <script src="https://unpkg.com/aframe-controller-cursor-component@0.2.7/dist/aframe-controller-cursor-component.min.js"></script>
+    <script src="https://rawgit.com/caseyyee/aframe-ui-widgets/master/dist/aframe-ui-widgets.min.js"></script>
+
   <!--
     <script src="components/intersection-spawn.js"></script>
     <script src="components/random-color.js"></script>
@@ -18,13 +20,18 @@
       <a-assets>
         <img id="solTexture" src="https://cdn.aframe.io/a-painter/images/floor.jpg" crossorigin="anonymous">
         <img id="skyTexture" src="https://cdn.aframe.io/a-painter/images/sky.jpg" crossorigin="anonymous">
-        <a-mixin id="voxel"
-          geometry="primitive: box; depth: 0.5; height: 0.5; width :0.5"
-          material="shader: standard"
-          random-color
-          snap="offset: 0.25 0.25 0.25; snap: 0.5 0.5 0.5">
-        </a-mixin>
+
+        <!-- UI Component pour le style des boutons -->
+        <a-mixin id="beveled-square" geometry="primitive: cone; radiusTop: 0.15; radiusBottom: 0.19; height: 0.02; segmentsRadial: 4; segmentsHeight: 1" rotation="0 45 0"></a-mixin>
+        <a-mixin id="square" geometry="primitive: box; width: 0.18; height: 0.025; depth: 0.18;" position="0 0.02 0"></a-mixin>
+        <a-mixin id="blue" material="color: #1E2768;"></a-mixin>
+        <a-mixin id="darkgreen" material="color: #22FF90;"></a-mixin>
+        <a-mixin id="yellow" material="color: #FFF88E;"></a-mixin>
+        <a-mixin id="offset" position="0 0.01 0"></a-mixin>
       </a-assets>
+
+      <!-- Boutons -->
+      <a-entity id="monBtn" ui-rotary position="0 0.5 0" rotation="90 180 0"></a-entity>
 
       <!-- Mains -->
       <a-entity id="teleHand" hand-controls="left" teleport-controls="type : parabolic; collisionEntities : [mixin='voxel'], #sol"></a-entity>
@@ -37,5 +44,6 @@
       <a-sky id="fondArriere" theta-length="90" radius="30" src="#skyTexture"></a-sky>
       <a-cylinder radius="30" height="0.1" id="sol" src="#solTexture"></a-cylinder>
 
+    </a-scene>  
   </body>
 </html>
