--- a/horloge/index.html
+++ b/horloge/index.html
@@ -39,24 +39,23 @@
         </a-enity>
       </a-entity>0-->
 
-      <a-entity id="horloge" geometry="primitive: cylinder; radius:0.59; height:0.05;" position="0 0.5 0" material="color:#FFFFFF;" rotation="90 180 0">
-        <a-entity id="monAiguille" ui-rotary >
-          <a-entity raycaster="objects: .heure; far:0.54; near:0.410; showLine:true; direction:0 0 0" line="color: orange; start:0 0 -0.460"></a-entity>
+      <a-entity id="horloge" geometry="primitive: cylinder; radius:0.59; height:0.05;" position="0 0.5 0.8" material="color:#FFFFFF;" rotation="90 180 0">
+        <a-entity id="monAiguille" ui-rotary>
         </a-entity>
         <a-entity geometry="primitive: box; depth:0.01; height: 0.6; width:0.02;" position="0 0.048 -0.217" material="color:#a82121" rotation="90 0 0"></a-entity>
         <a-entity id="lesChiffres">
-          <a-entity collider-check class="heure" text="value:1;align:center;color:#000000;width:4" rotation="-90 0 0" position="0.252 0.027 -0.388" geometry="height:0.15;width:0.15;depth:0.1" material="color:#ff80c0;alphaTest:0.63"></a-entity>
-          <a-entity collider-check class="heure" text="value:2;align:center;color:#000000;width:4" rotation="-90 0 0" position="0.419 0.027 -0.25" geometry="height:0.15;width:0.15;depth:0.1" material="color:#ff80c0;alphaTest:0.63"></a-entity>
-          <a-entity  class="heure" text="value:3;align:center;color:#000000;width:4" rotation="-90 0 0" position="0.493 0.027 -0.003" geometry="height:0.15;width:0.15;depth:0.1" material="color:#ff80c0;alphaTest:0.63"></a-entity>
-          <a-entity class="heure" text="value:4;align:center;color:#000000;width:4" rotation="-90 0 0" position="0.419 0.027 0.255" geometry="height:0.15;width:0.15;depth:0.1" material="color:#ff80c0;alphaTest:0.63"></a-entity>
-          <a-entity  class="heure" text="value:5;align:center;color:#000000;width:4" rotation="-90 0 0" position="0.237 0.027 0.41" geometry="height:0.15;width:0.15;depth:0.1" material="color:#ff80c0;alphaTest:0.63"></a-entity>
-          <a-entity  class="heure" text="value:6;align:center;color:#000000;width:4" rotation="-90 0 0" position="0 0.027 0.474" geometry="height:0.15;width:0.15;depth:0.1" material="color:#ff80c0;alphaTest:0.63"></a-entity>
-          <a-entity  class="heure" text="value:7;align:center;color:#000000;width:4" rotation="-90 0 0" position="-0.261 0.027 0.41" geometry="height:0.15;width:0.15;depth:0.1" material="color:#ff80c0;alphaTest:0.63"></a-entity>
-          <a-entity  class="heure" text="value:8;align:center;color:#000000;width:4" rotation="-90 0 0" position="-0.43 0.027 0.255" geometry="height:0.15;width:0.15;depth:0.1" material="color:#ff80c0;alphaTest:0.63"></a-entity>
-          <a-entity  class="heure" text="value:9;align:center;color:#000000;width:4" rotation="-90 0 0" position="-0.493 0.027 -0.003" geometry="height:0.15;width:0.15;depth:0.1" material="color:#ff80c0;alphaTest:0.63"></a-entity>
-          <a-entity  class="heure" text="value:10;align:center;color:#000000;width:4" rotation="-90 0 0" position="-0.43 0.027 -0.217" geometry="height:0.15;width:0.15;depth:0.1" material="color:#ff80c0;alphaTest:0.63"></a-entity>
-          <a-entity collider-check class="heure" text="value:11;align:center;color:#000000;width:4" rotation="-90 0 0" position="-0.261 0.027 -0.388" geometry="height:0.15;width:0.15;depth:0.1" material="color:#ff80c0;alphaTest:0.63"></a-entity>
-          <a-entity collider-check class="heure" text="value:12;align:center;color:#000000;width:4" rotation="-90 0 0" position="0 0.027 -0.462" geometry="height:0.15;width:0.15;depth:0.0.005" material="color:#ff80c0;alphaTest:0.63"></a-entity>
+          <a-entity  text="value:1;align:center;color:#000000;width:4" rotation="-90 0 0" position="0.252 0.027 -0.388" geometry="height:0.15;width:0.15;depth:0.1" material="color:#ff80c0;alphaTest:0.63"></a-entity>
+          <a-entity  text="value:2;align:center;color:#000000;width:4" rotation="-90 0 0" position="0.419 0.027 -0.25" geometry="height:0.15;width:0.15;depth:0.1" material="color:#ff80c0;alphaTest:0.63"></a-entity>
+          <a-entity  text="value:3;align:center;color:#000000;width:4" rotation="-90 0 0" position="0.493 0.027 -0.003" geometry="height:0.15;width:0.15;depth:0.1" material="color:#ff80c0;alphaTest:0.63"></a-entity>
+          <a-entity  text="value:4;align:center;color:#000000;width:4" rotation="-90 0 0" position="0.419 0.027 0.255" geometry="height:0.15;width:0.15;depth:0.1" material="color:#ff80c0;alphaTest:0.63"></a-entity>
+          <a-entity  text="value:5;align:center;color:#000000;width:4" rotation="-90 0 0" position="0.237 0.027 0.41" geometry="height:0.15;width:0.15;depth:0.1" material="color:#ff80c0;alphaTest:0.63"></a-entity>
+          <a-entity  text="value:6;align:center;color:#000000;width:4" rotation="-90 0 0" position="0 0.027 0.474" geometry="height:0.15;width:0.15;depth:0.1" material="color:#ff80c0;alphaTest:0.63"></a-entity>
+          <a-entity  text="value:7;align:center;color:#000000;width:4" rotation="-90 0 0" position="-0.261 0.027 0.41" geometry="height:0.15;width:0.15;depth:0.1" material="color:#ff80c0;alphaTest:0.63"></a-entity>
+          <a-entity  text="value:8;align:center;color:#000000;width:4" rotation="-90 0 0" position="-0.43 0.027 0.255" geometry="height:0.15;width:0.15;depth:0.1" material="color:#ff80c0;alphaTest:0.63"></a-entity>
+          <a-entity  text="value:9;align:center;color:#000000;width:4" rotation="-90 0 0" position="-0.493 0.027 -0.003" geometry="height:0.15;width:0.15;depth:0.1" material="color:#ff80c0;alphaTest:0.63"></a-entity>
+          <a-entity  text="value:10;align:center;color:#000000;width:4" rotation="-90 0 0" position="-0.43 0.027 -0.217" geometry="height:0.15;width:0.15;depth:0.1" material="color:#ff80c0;alphaTest:0.63"></a-entity>
+          <a-entity  text="value:11;align:center;color:#000000;width:4" rotation="-90 0 0" position="-0.261 0.027 -0.388" geometry="height:0.15;width:0.15;depth:0.1" material="color:#ff80c0;alphaTest:0.63"></a-entity>
+          <a-entity  text="value:12;align:center;color:#000000;width:4" rotation="-90 0 0" position="0 0.027 -0.462" geometry="height:0.15;width:0.15;depth:0.0.005" material="color:#ff80c0;alphaTest:0.63"></a-entity>
         </a-entity>
       </a-entity>
 
@@ -81,8 +80,10 @@
       </a-cylinder>
 
     </a-scene>
-  <!--  <script>
+  <script>
      var monHorloge = document.querySelector('#horloge');
+     var angle = knob.rotation.y * 180 / Math.PI;
+     console.log(angle);
     /*
     12 = 0.22922853427883383 et -0.23235042978967302
     1 =-0.374113606680754 et -0.7919737102765261
@@ -197,6 +198,6 @@
        }
 
      });
-   </script>-->
+   </script>
   </body>
 </html>
