--- a/horloge/index.html
+++ b/horloge/index.html
@@ -11,9 +11,8 @@
     <script src="https://cdn.rawgit.com/donmccurdy/aframe-extras/v3.12.4/dist/aframe-extras.min.js"></script>
     <script src="https://unpkg.com/aframe-text-geometry-component@0.5.1/dist/aframe-text-geometry-component.min.js"></script>
     <script src="components/ui-widget.js"></script>
-    <script src="components/collider-check.js"></script><!--
+    <!--<script src="components/collider-check.js"></script>
       <script src="https://rawgit.com/caseyyee/aframe-ui-widgets/master/dist/aframe-ui-widgets.min.js"></script>
-
     <script src="components/random-color.js"></script>
     <script src="components/snap.js"></script>
   -->
@@ -39,23 +38,23 @@
         </a-enity>
       </a-entity>0-->
 
-      <a-entity id="horloge" geometry="primitive: cylinder; radius:0.59; height:0.05;" position="0 0.5 0.8" material="color:#FFFFFF;" rotation="90 180 0">
+      <a-entity id="horloge" geometry="primitive: cylinder; radius:0.59; height:0.05;" position="0.5 0 -0.8" material="color:#FFFFFF;" rotation="90 270 0">
         <a-entity id="monAiguille" ui-rotary>
         </a-entity>
         <a-entity geometry="primitive: box; depth:0.01; height: 0.6; width:0.02;" position="0 0.048 -0.217" material="color:#a82121" rotation="90 0 0"></a-entity>
         <a-entity id="lesChiffres">
-          <a-entity  text="value:1;align:center;color:#000000;width:4" rotation="-90 0 0" position="0.252 0.027 -0.388" geometry="height:0.15;width:0.15;depth:0.1" material="color:#ff80c0;alphaTest:0.63"></a-entity>
-          <a-entity  text="value:2;align:center;color:#000000;width:4" rotation="-90 0 0" position="0.419 0.027 -0.25" geometry="height:0.15;width:0.15;depth:0.1" material="color:#ff80c0;alphaTest:0.63"></a-entity>
-          <a-entity  text="value:3;align:center;color:#000000;width:4" rotation="-90 0 0" position="0.493 0.027 -0.003" geometry="height:0.15;width:0.15;depth:0.1" material="color:#ff80c0;alphaTest:0.63"></a-entity>
-          <a-entity  text="value:4;align:center;color:#000000;width:4" rotation="-90 0 0" position="0.419 0.027 0.255" geometry="height:0.15;width:0.15;depth:0.1" material="color:#ff80c0;alphaTest:0.63"></a-entity>
-          <a-entity  text="value:5;align:center;color:#000000;width:4" rotation="-90 0 0" position="0.237 0.027 0.41" geometry="height:0.15;width:0.15;depth:0.1" material="color:#ff80c0;alphaTest:0.63"></a-entity>
-          <a-entity  text="value:6;align:center;color:#000000;width:4" rotation="-90 0 0" position="0 0.027 0.474" geometry="height:0.15;width:0.15;depth:0.1" material="color:#ff80c0;alphaTest:0.63"></a-entity>
-          <a-entity  text="value:7;align:center;color:#000000;width:4" rotation="-90 0 0" position="-0.261 0.027 0.41" geometry="height:0.15;width:0.15;depth:0.1" material="color:#ff80c0;alphaTest:0.63"></a-entity>
-          <a-entity  text="value:8;align:center;color:#000000;width:4" rotation="-90 0 0" position="-0.43 0.027 0.255" geometry="height:0.15;width:0.15;depth:0.1" material="color:#ff80c0;alphaTest:0.63"></a-entity>
-          <a-entity  text="value:9;align:center;color:#000000;width:4" rotation="-90 0 0" position="-0.493 0.027 -0.003" geometry="height:0.15;width:0.15;depth:0.1" material="color:#ff80c0;alphaTest:0.63"></a-entity>
-          <a-entity  text="value:10;align:center;color:#000000;width:4" rotation="-90 0 0" position="-0.43 0.027 -0.217" geometry="height:0.15;width:0.15;depth:0.1" material="color:#ff80c0;alphaTest:0.63"></a-entity>
-          <a-entity  text="value:11;align:center;color:#000000;width:4" rotation="-90 0 0" position="-0.261 0.027 -0.388" geometry="height:0.15;width:0.15;depth:0.1" material="color:#ff80c0;alphaTest:0.63"></a-entity>
-          <a-entity  text="value:12;align:center;color:#000000;width:4" rotation="-90 0 0" position="0 0.027 -0.462" geometry="height:0.15;width:0.15;depth:0.0.005" material="color:#ff80c0;alphaTest:0.63"></a-entity>
+          <a-entity  text="value:1;align:center;color:#000000;width:4" rotation="-90 0 0" position="0.252 0.027 -0.388"></a-entity>
+          <a-entity  text="value:2;align:center;color:#000000;width:4" rotation="-90 0 0" position="0.419 0.027 -0.25"></a-entity>
+          <a-entity  text="value:3;align:center;color:#000000;width:4" rotation="-90 0 0" position="0.493 0.027 -0.003"></a-entity>
+          <a-entity  text="value:4;align:center;color:#000000;width:4" rotation="-90 0 0" position="0.419 0.027 0.255"></a-entity>
+          <a-entity  text="value:5;align:center;color:#000000;width:4" rotation="-90 0 0" position="0.237 0.027 0.41"></a-entity>
+          <a-entity  text="value:6;align:center;color:#000000;width:4" rotation="-90 0 0" position="0 0.027 0.474"></a-entity>
+          <a-entity  text="value:7;align:center;color:#000000;width:4" rotation="-90 0 0" position="-0.261 0.027 0.41"></a-entity>
+          <a-entity  text="value:8;align:center;color:#000000;width:4" rotation="-90 0 0" position="-0.43 0.027 0.255"></a-entity>
+          <a-entity  text="value:9;align:center;color:#000000;width:4" rotation="-90 0 0" position="-0.493 0.027 -0.003"></a-entity>
+          <a-entity  text="value:10;align:center;color:#000000;width:4" rotation="-90 0 0" position="-0.43 0.027 -0.217"></a-entity>
+          <a-entity  text="value:11;align:center;color:#000000;width:4" rotation="-90 0 0" position="-0.261 0.027 -0.388"></a-entity>
+          <a-entity  text="value:12;align:center;color:#000000;width:4" rotation="-90 0 0" position="0 0.027 -0.462"></a-entity>
         </a-entity>
       </a-entity>
 
@@ -75,124 +74,141 @@
       <a-sky id="fondArriere" theta-length="90"
         radius="5" src="#skyTexture">
       </a-sky>
-      <a-cylinder radius="5" height="0.1"
+      <a-cylinder radius="5" height="0.1" position="0 -1 0"
         id="sol" src="#solTexture">
       </a-cylinder>
 
     </a-scene>
   <script>
      var monHorloge = document.querySelector('#horloge');
-     var angle = knob.rotation.y * 180 / Math.PI;
-     console.log(angle);
+
     /*
-    12 = 0.22922853427883383 et -0.23235042978967302
-    1 =-0.374113606680754 et -0.7919737102765261
-    2 = -0.8345147325449358 et -1.1641998009858112
-    3 = -1.3922972413402361 et -1.636005115495924
-    4 = -1.99811318158857 et -2.1849884116977987
-    5 = -2.39450711425554 et -2.615905558557783
-    6 = -2.9463511208008177 et -3.2524853598130763
-    7 = -3.588855217499487 et -3.9011137607611936
-    8 = -4.066164896619931 et  -4.236056552280541
-    9 = -4.527870889375925 et -4.797329285685695
-    10 = -5.0025612788875335 et -5.33764103073996
-    11 = -5.508761549506156 et -5.810486128384262
+    12 = 0
+    1 = -30
+    2 = -60
+    3 = -90
+    4 = -120
+    5 = -150
+    6 = -180
+    7 = -210
+    8 = -240
+    9 = -270
+    10 = -300
+    11 = -330
 */
      /* Lorsque que la petite aiguille tombe sur un chiffre*/
      monHorloge.addEventListener('change', function(){
 
-       /* Pour 12 */
-       if(knob.rotation.y < 0.22922853427883383 &&
-          knob.rotation.y > -0.23235042978967302) {
-         console.log("test 12");
+       /* Angle de l'horloge*/
+       var angle = knob.rotation.y * 180 / Math.PI;
 
-         monHorloge.setAttribute("material", "color:#c9c3c3");
+       /* Grosseur de 25 angles */
+       var lesAnglesNegatifs = [-10, -20, -40, -50, -70, -80, -100, -110, -130,
+                                -140, -160, -170, -190, -200, -220, -230, -250,
+                                -260, -280, -290, -310, -320, -340, -350, -360];
+      /* Grosseur de 24 angles */
+      var lesAnglesPositifs = [0, 10, 30, 40, 60, 70, 90, 110, 130, 140, 160,
+                              170, 190, 200, 220, 230, 250, 260, 280, 290, 310,
+                              320, 340, 360];
+
+       /* Remet la rotation à zéro lorsqu'on dépasse les angles d'un cercle
+       -360 ou 360 */
+       if(angle <= lesAnglesNegatifs[24] || angle >= lesAnglesPositifs[23]) {
+
+         knob.rotation.y = 0;
+
        }
 
-       /* Pour 1 */
-       else if(knob.rotation.y < -0.374113606680754 &&
-          knob.rotation.y > -0.7919737102765261) {
-         console.log("test 1");
+       /* Pour 12h, 10 et -10 ou -350 et 0 */
+       if((angle < lesAnglesPositifs[1] && angle > lesAnglesNegatifs[0]) ||
+         (angle < lesAnglesNegatifs[23] && angle > lesAnglesPositifs[0])) {
+         console.log("12h");
+         monHorloge.setAttribute("material", "color:#c9c3c3");
 
+       }
+
+       /* Pour 1,-20 et -40 ou 340 et 320 */
+       else if((angle < lesAnglesNegatifs[1] && angle > lesAnglesNegatifs[3]) ||
+              (angle < lesAnglesPositifs[22] && angle > lesAnglesPositifs[21])) {
+         console.log("1h");
          monHorloge.setAttribute("material", "color:#af9480");
        }
 
-       /* Pour 2 */
-       else if(knob.rotation.y < -0.8345147325449358 &&
-          knob.rotation.y > -1.1641998009858112) {
-         console.log("test 2");
-
+       /* Pour 2, -50 et -70 ou 310 et 290 */
+       else if((angle < lesAnglesNegatifs[3] && angle > lesAnglesNegatifs[4]) ||
+              (angle < lesAnglesPositifs[20] && angle > lesAnglesPositifs[19])) {
+         console.log("2h");
           monHorloge.setAttribute("material", "color:#498446");
        }
 
-       /* Pour 3 */
-       else if(knob.rotation.y < -1.3922972413402361 &&
-          knob.rotation.y > -1.636005115495924) {
-         console.log("test 3");
+       /* Pour 3, -80 et -100 ou 280 et 260 */
+       else if((angle < lesAnglesNegatifs[5] && angle > lesAnglesNegatifs[6]) ||
+              (angle < lesAnglesPositifs[18] && angle > lesAnglesPositifs[17])) {
+         console.log("3h");
 
          monHorloge.setAttribute("material", "color:#fffb26");
        }
 
-       /* Pour 4 */
-       else if(knob.rotation.y < -1.99811318158857 &&
-          knob.rotation.y > -2.1849884116977987) {
-         console.log("test 4");
+       /* Pour 4, -110 et -130 ou 250 et 230 */
+       else if((angle < lesAnglesNegatifs[7] && angle > lesAnglesNegatifs[8]) ||
+              (angle < lesAnglesPositifs[16] && angle > lesAnglesPositifs[15])) {
+         console.log("4h");
 
          monHorloge.setAttribute("material", "color:#28ffde");
        }
 
-       /* Pour 5 */
-       else if(knob.rotation.y < -2.39450711425554 &&
-          knob.rotation.y > -2.615905558557783) {
-         console.log("test 5");
+       /* Pour 5, -140 et -160 ou 220 et 200 */
+       else if((angle < lesAnglesNegatifs[9] && angle > lesAnglesNegatifs[10]) ||
+              (angle < lesAnglesPositifs[14] && angle > lesAnglesPositifs[13])) {
+         console.log("5h");
 
          monHorloge.setAttribute("material", "color:#2772f4");
        }
 
-       /* Pour 6 */
-       else if(knob.rotation.y < -2.9463511208008177 &&
-          knob.rotation.y > -3.2524853598130763) {
-         console.log("test 6");
+       /* Pour 6, -170 et -190 ou 190 ou 170 */
+       else if((angle < lesAnglesNegatifs[11] && angle > lesAnglesNegatifs[12]) ||
+              (angle < lesAnglesPositifs[12] && angle > lesAnglesPositifs[11])) {
+         console.log("6h");
 
          monHorloge.setAttribute("material", "color:#8e27e8");
        }
 
-       /* Pour 7 */
-       else if(knob.rotation.y < -3.588855217499487 &&
-          knob.rotation.y > -3.9011137607611936) {
-         console.log("test 7");
+       /* Pour 7, -200 et -220 ou 160 et 140 */
+       else if((angle < lesAnglesNegatifs[13] && angle > lesAnglesNegatifs[14]) ||
+              (angle < lesAnglesPositifs[10] && angle > lesAnglesPositifs[9])) {
+         console.log("7h");
 
          monHorloge.setAttribute("material", "color:#e829be");
        }
 
-       /* Pour 8 */
-       else if(knob.rotation.y < -4.066164896619931 &&
-          knob.rotation.y > -4.236056552280541) {
-         console.log("test 8");
+       /* Pour 8, -230 et -250 ou 130 et 110  */
+       else if((angle < lesAnglesNegatifs[15] && angle > lesAnglesNegatifs[16]) ||
+              (angle < lesAnglesPositifs[8] && angle > lesAnglesPositifs[7])) {
+         console.log("8h");
 
          monHorloge.setAttribute("material", "color:#e2266e");
        }
 
-       /* Pour 9 */
-       else if(knob.rotation.y < -4.527870889375925 &&
-          knob.rotation.y > -4.797329285685695) {
-         console.log("test 9");
+       /* Pour 9, -260 et 280 ou 90 et 70 */
+       else if((angle < lesAnglesNegatifs[17] && angle > lesAnglesNegatifs[18]) ||
+              (angle < lesAnglesPositifs[6] && angle > lesAnglesPositifs[5])) {
+         console.log("9h");
 
          monHorloge.setAttribute("material", "color:#890000");
        }
 
-       /* Pour 10 */
-       else if(knob.rotation.y < -5.0025612788875335 &&
-          knob.rotation.y > -5.33764103073996) {
-         console.log("test 10");
+       /* Pour 10, -290 et -310 ou 60 et 40 */
+       else if((angle < lesAnglesNegatifs[19] && angle > lesAnglesNegatifs[20]) ||
+              (angle < lesAnglesPositifs[4] && angle > lesAnglesPositifs[3])) {
+         console.log("10h");
 
          monHorloge.setAttribute("material", "color:#ff9000");
        }
 
-       /* Pour 11 */
-       else if(knob.rotation.y < -5.508761549506156 &&
-          knob.rotation.y > -5.810486128384262) {
-         console.log("test 11");
+       /* Pour 11, -320 et -340 ou 30 et 10 */
+       else if((angle < lesAnglesNegatifs[21] && angle > lesAnglesNegatifs[22]) ||
+              (angle < lesAnglesPositifs[2] && angle > lesAnglesPositifs[1])) {
+         console.log("11h");
 
          monHorloge.setAttribute("material", "color:#154c56");
        }
