--- a/horloge/index.html
+++ b/horloge/index.html
@@ -20,8 +20,7 @@
 
       <!-- Horloge -->
       <a-entity id="horloge" horloge geometry="primitive: cylinder; radius:0.59; height:0.05;" position="0.5 0 -0.8" material="color:#FFFFFF;" rotation="90 270 0">
-        <a-entity id="monAiguille" ui-rotary>
-        </a-entity>
+        <a-entity id="monAiguille" ui-rotary></a-entity>
         <a-entity geometry="primitive: box; depth:0.01; height: 0.6; width:0.02;" position="0 0.048 -0.217" material="color:#a82121" rotation="90 0 0"></a-entity>
         <a-entity id="lesChiffres">
           <a-entity  text="value:1;align:center;color:#000000;width:4" rotation="-90 0 0" position="0.252 0.027 -0.388"></a-entity>
