Encore de la correction.

--- a/horloge/index.html
+++ b/horloge/index.html
@@ -41,10 +41,9 @@
       <!-- Mains -->
       <a-entity id="teleHand"
         hand-controls="left"
-        teleport-controls="type : parabolic;
-        collisionEntities : [mixin='voxel'], #sol">
+        teleport-controls="type : parabolic">
       </a-entity>
-      <a-entity id="blockHand"
+      <a-entity
         hand-controls="right"
         controller-cursor>
       </a-entity>
