Affichage du mois de choisi

--- a/calendrierCubeEtScanneur/index.html
+++ b/calendrierCubeEtScanneur/index.html
@@ -49,6 +49,18 @@
         <img id="oct" src="img/oct.png">
         <img id="nov" src="img/nov.png">
         <img id="dec" src="img/dec.png">
+        <img id="JAN" src="img/jan_t.png">
+        <img id="FEB" src="img/feb_t.png">
+        <img id="MAR" src="img/mar_t.png">
+        <img id="APR" src="img/apr_t.png">
+        <img id="MAY" src="img/may_t.png">
+        <img id="JUNE" src="img/june_t.png">
+        <img id="JULY" src="img/july_t.png">
+        <img id="AUG" src="img/aug_t.png">
+        <img id="SEPT" src="img/sept_t.png">
+        <img id="OCT" src="img/oct_t.png">
+        <img id="NOV" src="img/nov_t.png">
+        <img id="DEC" src="img/dec_t.png">
       </a-assets>
 
       <!-- Les mains -->
@@ -59,35 +71,35 @@
       </a-entity>
 
       <!-- Les cubes pour choisir le mois -->
-      <a-entity class="cube" mixin="cubeMois" position="-1 0.265 0"
+      <a-entity class="cube" mixin="cubeMois" position="-0.5 0.265 -1.5"
                 material="src:#jan" data-mois="JAN"></a-entity>
-      <a-entity class="cube" mixin="cubeMois" position="-2 0.265 1"
+      <a-entity class="cube" mixin="cubeMois" position="0.5 0.265 -1.5"
                 material="src:#feb" data-mois="FEB"></a-entity>
-      <a-entity class="cube" mixin="cubeMois" position="-3 0.265 1"
+      <a-entity class="cube" mixin="cubeMois" position="1.5 0.265 -1.5"
                 material="src:#dec" data-mois="DEC"></a-entity>
-      <a-entity class="cube" mixin="cubeMois" position="-4 0.265 0"
+      <a-entity class="cube" mixin="cubeMois" position="-0.5 0.265 -2.5"
                 material="src:#mar" data-mois="MAR"></a-entity>
-      <a-entity class="cube" mixin="cubeMois" position="-5 0.265 1"
+      <a-entity class="cube" mixin="cubeMois" position="0.5 0.265 -2.5"
                 material="src:#apr" data-mois="APR"></a-entity>
-      <a-entity class="cube" mixin="cubeMois" position="-6 0.265 1"
+      <a-entity class="cube" mixin="cubeMois" position="1.5 0.265 -2.5"
                 material="src:#may" data-mois="MAY"></a-entity>
-      <a-entity class="cube" mixin="cubeMois" position="-7 0.265 0"
+      <a-entity class="cube" mixin="cubeMois" position="-0.5 0.265 -3.5"
                 material="src:#june" data-mois="JUNE"></a-entity>
-      <a-entity class="cube" mixin="cubeMois" position="-8 0.265 1"
+      <a-entity class="cube" mixin="cubeMois" position="0.5 0.265 -3.5"
                 material="src:#july" data-mois="JULY"></a-entity>
-      <a-entity class="cube" mixin="cubeMois" position="-9 0.265 1"
+      <a-entity class="cube" mixin="cubeMois" position="1.5 0.265 -3.5"
                 material="src:#aug" data-mois="AUG"></a-entity>
-      <a-entity class="cube" mixin="cubeMois" position="-10 0.265 0"
+      <a-entity class="cube" mixin="cubeMois" position="1.5 0.265 -4.5"
                 material="src:#nov" data-mois="NOV"></a-entity>
-      <a-entity class="cube" mixin="cubeMois" position="-11 0.265 1"
+      <a-entity class="cube" mixin="cubeMois" position="-0.5 0.265 -4.5"
                 material="src:#sept" data-mois="SEPT"></a-entity>
-      <a-entity class="cube" mixin="cubeMois" position="-12 0.265 1"
+      <a-entity class="cube" mixin="cubeMois" position="0.5 0.265 -4.5"
                 material="src:#oct" data-mois="OCT"></a-entity>
 
       <!-- Le lecteur de cube -->
-      <a-entity class="lecteurCube" mixin="lecteurCube" position = "0 1 0"
+      <a-entity class="lecteurCube" mixin="lecteurCube" position = "2 0.75 0"
                 material="color:red; opacity: 0.7" data-mois-choisi="" lecture-cube>
-        <a-box static-body width=0.5 height=0.5 depth=0.5 visible="true" position="0 -0.5 0" shadow></a-box>
+        <a-box id="blocSousLecteur" static-body width=0.5 height=0.5 depth=0.5 visible="true" position="0 -0.5 0" shadow></a-box>
       </a-entity>
 
       <!-- Collider du sol pour empêcher les blocs de tomber -->
