--- a/jourBouton/index.html
+++ b/jourBouton/index.html
@@ -8,15 +8,15 @@
     <script src="https://unpkg.com/aframe-teleport-controls@0.2.0/dist/aframe-teleport-controls.min.js"></script>
     <script src="https://cdn.rawgit.com/donmccurdy/aframe-extras/v3.13.1/dist/aframe-extras.min.js"></script>
     <script src="https://rawgit.com/feiss/aframe-environment-component/master/dist/aframe-environment-component.min.js"></script>
-    <script src="components/ui-widget.js"></script>
-    <script src="components/cadran.js"></script>
+    <script src="https://rawgit.com/caseyyee/aframe-ui-widgets/master/dist/aframe-ui-widgets.min.js"></script>
     <script src="components/jour-bouton.js"></script>
   </head>
   <body>
-    <a-scene stats environment="preset:egypt; shadow:true;">
+    <a-scene stats environment="preset:forest; shadow:false;">
 
       <a-assets>
         <a-mixin id="bouton" jour-bouton ui-button="pressedColor: #808080; color: #000000; baseColor: #ffffff;"></a-mixin>
+        <a-mixin id="offset" position="0 0.01 0"></a-mixin>
         <a-mixin id="btn1" geometry="primitive: cylinder; radius: 0.1; height: 0.025; segmentsHeight: 1;" position="0 0.02 0" material="src:img/1.png"></a-mixin>
         <a-mixin id="btn2" geometry="primitive: cylinder; radius: 0.1; height: 0.025; segmentsHeight: 1;" position="0 0.02 0" material="src:img/2.png"></a-mixin>
         <a-mixin id="btn3" geometry="primitive: cylinder; radius: 0.1; height: 0.025; segmentsHeight: 1;" position="0 0.02 0" material="src:img/3.png"></a-mixin>
@@ -32,35 +32,37 @@
       </a-assets>
 
       <!-- Selecteur jour -->
-      <a-entity id="selecteurJour">
+      <a-entity id="selecteurJour" scale="0.8 0.8 0.8" position="0 0.5 0">
         <!-- Les boutons -->
         <a-entity geometry="primitive:box;depth:1.28;height:0.25;width:1.75;"
                   material="color:#FFFFFF;" position="-0.25 0.129 0"></a-entity>
-        <a-entity mixin="bouton" data-btn="1" ui-button="top:btn1;"position="-0.813 0.263 0.375"></a-entity>
-        <a-entity mixin="bouton" data-btn="4" ui-button="top:btn4;" position="-0.813 0.263 0"></a-entity>
-        <a-entity mixin="bouton" data-btn="7" ui-button="top:btn7;" position="-0.813 0.263 -0.375"></a-entity>
-        <a-entity mixin="bouton" data-btn="2" ui-button="top:btn2;" position="-0.4375 0.263 0.375"></a-entity>
-        <a-entity mixin="bouton" data-btn="5" ui-button="top:btn5;" position="-0.4375 0.263 0"></a-entity>
-        <a-entity mixin="bouton" data-btn="8" ui-button="top:btn8;" position="-0.4375 0.263 -0.375"></a-entity>
-        <a-entity mixin="bouton" data-btn="3" ui-button="top:btn3;" position="-0.0625 0.263 0.375"></a-entity>
-        <a-entity mixin="bouton" data-btn="6" ui-button="top:btn6;" position="-0.0625 0.263 0"></a-entity>
-        <a-entity mixin="bouton" data-btn="9" ui-button="top:btn9;" position="-0.0625 0.263 -0.375"></a-entity>
-        <a-entity mixin="bouton" data-btn="0" ui-button="top:btn0;" position="0.3125 0.263 0.375"></a-entity>
-        <a-entity mixin="bouton" data-btn="ok" position="0.3125 0.263 0" ui-button="top:btn-ok;"></a-entity>
-        <a-entity mixin="bouton" data-btn="reset" position="0.3125 0.263 -0.375" ui-button="top:btn-reset;"></a-entity>
+        <a-entity mixin="bouton" data-btn="1" ui-button="top:btn1;pressed:btn1,offset"position="-0.813 0.263 0.375"></a-entity>
+        <a-entity mixin="bouton" data-btn="4" ui-button="top:btn4;pressed:btn4,offset" position="-0.813 0.263 0"></a-entity>
+        <a-entity mixin="bouton" data-btn="7" ui-button="top:btn7;pressed:btn7,offset" position="-0.813 0.263 -0.375"></a-entity>
+        <a-entity mixin="bouton" data-btn="2" ui-button="top:btn2;pressed:btn2,offset" position="-0.4375 0.263 0.375"></a-entity>
+        <a-entity mixin="bouton" data-btn="5" ui-button="top:btn5;pressed:btn5,offset" position="-0.4375 0.263 0"></a-entity>
+        <a-entity mixin="bouton" data-btn="8" ui-button="top:btn8;pressed:btn8,offset" position="-0.4375 0.263 -0.375"></a-entity>
+        <a-entity mixin="bouton" data-btn="3" ui-button="top:btn3;pressed:btn3,offset" position="-0.0625 0.263 0.375"></a-entity>
+        <a-entity mixin="bouton" data-btn="6" ui-button="top:btn6;pressed:btn6,offset" position="-0.0625 0.263 0"></a-entity>
+        <a-entity mixin="bouton" data-btn="9" ui-button="top:btn9;pressed:btn9,offset" position="-0.0625 0.263 -0.375"></a-entity>
+        <a-entity mixin="bouton" data-btn="0" ui-button="top:btn0;pressed:btn0,offset" position="0.3125 0.263 0.375"></a-entity>
+        <a-entity mixin="bouton" data-btn="ok" position="0.3125 0.263 0" ui-button="top:btn-ok;pressed:btn-ok,offset"></a-entity>
+        <a-entity mixin="bouton" data-btn="reset" position="0.3125 0.263 -0.375" ui-button="top:btn-reset;pressed:btn-reset,offset"></a-entity>
         <!-- Le texte -->
-        <a-entity id="ecranJour" position="-0.25 1.883 -1" geometry="radius:1.44;phiStart:180;phiLength:180;primitive:sphere" material="side:back" text__t="width:1.98;wrapCount:5.84;value:Day :"></a-entity>
+        <a-entity id="ecranJour" position="-0.25 1.883 -1" data-jour="" geometry="radius:1.44;phiStart:180;phiLength:180;primitive:sphere" material="side:back" text__t="width:1.98;wrapCount:6.5;value:Day :  ;color:red;"></a-entity>
         <a-entity position="-0.25 1.201 -1" text__t="wrapCount:28;value:\nYou can't have more than two numbers.\nPress 'Ok' to continue \nor press 'Reset' to enter new day;width:1.98;align:center"></a-entity>
       </a-entity>
 
       <!-- Les mains et la camera -->
-      <a-entity id="cameraRig" position="0 2 0">
+      <a-entity id="cameraRig">
         <a-entity id="head" camera wasd-controls look-controls></a-entity>
-        <a-entity id="left-hand" vive-controls="hand:left;model:true;"
+        <a-entity id="left-hand"
                   teleport-controls="cameraRig: #cameraRig;
                                      teleportOrigin: #head;
-                                     type:parabolic;"></a-entity>
-        <a-entity id="right-hand" vive-controls="hand:right;model:true;"></a-entity>
+                                     type:parabolic;"
+                                     hand-controls="left"></a-entity>
+        <a-entity id="right-hand"
+        hand-controls="right"></a-entity>
       </a-entity>
 
     </a-scene>
