--- a/prototype_01/index.html
+++ b/prototype_01/index.html
@@ -16,7 +16,7 @@
     <script src="components/lecture-cube.js"></script>
     <script src="components/phase-shift.js"></script>
     <script src="components/jour-bouton.js"></script>
-    <script src="components/bouton-reset.js"></script>
+    <script src="components/bouton-reset-cubes.js"></script>
     <script src="components/horloge.js"></script>
   </head>
   <body>
@@ -117,30 +117,42 @@
       </a-entity>
 
       <!-- Les cubes pour choisir le mois -->
-      <a-entity scale="0.5 0.5 0.5" position="-3 0 0">
+      <a-entity id="selecteurMois" scale="0.5 0.5 0.5" position="-3 0 0">
         <a-entity class="cube" mixin="cubeMois" position="-0.5 1.5 -1.5"
+                  data-pos-init="-0.5 1.5 -1.5"
                   material="src:#jan" data-mois="JAN"></a-entity>
         <a-entity class="cube" mixin="cubeMois" position="0.5 1.5 -1.5"
+                  data-pos-init="0.5 1.5 -1.5"
                   material="src:#feb" data-mois="FEB"></a-entity>
         <a-entity class="cube" mixin="cubeMois" position="1.5 1.5 -1.5"
+                  data-pos-init="1.5 1.5 -1.5"
                   material="src:#dec" data-mois="DEC"></a-entity>
         <a-entity class="cube" mixin="cubeMois" position="-0.5 1.5 -2.5"
+                  data-pos-init="-0.5 1.5 -2.5"
                   material="src:#mar" data-mois="MAR"></a-entity>
         <a-entity class="cube" mixin="cubeMois" position="0.5 1.5 -2.5"
+                  data-pos-init="0.5 1.5 -2.5"
                   material="src:#apr" data-mois="APR"></a-entity>
         <a-entity class="cube" mixin="cubeMois" position="1.5 1.5 -2.5"
+                  data-pos-init="1.5 1.5 -2.5"
                   material="src:#may" data-mois="MAY"></a-entity>
         <a-entity class="cube" mixin="cubeMois" position="-0.5 1.5 -3.5"
+                  data-pos-init="-0.5 1.5 -3.5"
                   material="src:#june" data-mois="JUNE"></a-entity>
         <a-entity class="cube" mixin="cubeMois" position="0.5 1.5 -3.5"
+                  data-pos-init="0.5 1.5 -3.5"
                   material="src:#july" data-mois="JULY"></a-entity>
         <a-entity class="cube" mixin="cubeMois" position="1.5 1.5 -3.5"
+                  data-pos-init="1.5 1.5 -3.5"
                   material="src:#aug" data-mois="AUG"></a-entity>
         <a-entity class="cube" mixin="cubeMois" position="1.5 1.5 -4.5"
+                  data-pos-init="1.5 1.5 -4.5"
                   material="src:#nov" data-mois="NOV"></a-entity>
         <a-entity class="cube" mixin="cubeMois" position="-0.5 1.5 -4.5"
+                  data-pos-init="-0.5 1.5 -4.5"
                   material="src:#sept" data-mois="SEPT"></a-entity>
         <a-entity class="cube" mixin="cubeMois" position="0.5 1.5 -4.5"
+                  data-pos-init="0.5 1.5 -4.5"
                   material="src:#oct" data-mois="OCT"></a-entity>
 
         <!-- Le lecteur de cube -->
@@ -149,7 +161,7 @@
           <a-box id="blocSousLecteur" static-body width=0.5 height=0.5 depth=0.5 visible="true" position="0 -0.5 0" shadow></a-box>
         </a-entity>
 
-        <a-entity mixin="bouton" bouton-reset data-btn-reset="cube" position="1.5 1.17 -0.8" ui-button="top:btn-reset;pressed:btn-reset,offset"></a-entity>
+        <a-entity bouton-reset-cubes position="1.5 1.17 -0.8" ui-button="baseColor: #ffffff;top:btn-reset;pressed:btn-reset,offset"></a-entity>
         <a-entity position="0.5 0.5 -2.7"geometry="primitive:box;depth: 4.5; width: 3; height: 1.25" static-body material="color:brown;"></a-entity>
       </a-entity>
 
