--- a/prototype_01/index.html
+++ b/prototype_01/index.html
@@ -287,9 +287,7 @@
           </a-entity>
 
           <!-- La ligne du graphe -->
-          <a-entity id="ligneGraphe">
-
-          </a-entity>
+          <a-entity id="ligneGraphe"></a-entity>
 
         </a-entity>
 
