Modification d'une erreur

--- a/telekinesie/index.html
+++ b/telekinesie/index.html
@@ -86,7 +86,7 @@
       </a-assets>
 
       <!-- Les mains et la camera -->
-      <a-entity id="cameraRig" progressive-controls="maxLevel:point; objects: .cube, #graph;controllerModel:false;pointMixin:mypoint;">
+      <a-entity id="cameraRig" progressive-controls="maxLevel:point; objects: .cube, #horloge, #graph;controllerModel:false;pointMixin:mypoint;">
         <a-entity id="head" camera="far:1000" wasd-controls look-controls></a-entity>
         <a-entity id="lhand"
                   teleport-controls="cameraRig: #cameraRig;
