--- a/calendrier_main/index.html
+++ b/calendrier_main/index.html
@@ -50,10 +50,12 @@
                  event-set__hover-end="material.opacity: 1.0"
                  event-set__grab-start="material.color: green"></a-mixin>
         <a-mixin id="btnCal" rotation="180 90 90" jour-clickable
-                 geometry="width:0.5;height:0.1;depth:0.5"
+                 data-nb-click="0" geometry="width:0.5;height:0.1;depth:0.5"
                  material="opacity:0.2"></a-mixin>
+        <!-- Animations-->
         <a-mixin id="fade" attribute="material.opacity" direction="alternate"
-                 begin="playFade" repeat="0" from="0.2" to="1"></a-mixin>
+                 begin="playFade" repeat="0"
+                 from="0.2" to="1" dur="500"></a-mixin>
         <img id="t_1" src="img/jour/1.png">
         <img id="t_2" src="img/jour/2.png">
         <img id="t_3" src="img/jour/3.png">
@@ -117,8 +119,15 @@
       </a-entity>
 
       <!-- Jour -->
-      <a-entity id="calendrier"hoverable position="-1.05 2.7 -3" scale="0.7 0.7 0.7">
-        <a-text id="textJour" position="0 1 0" text="width: 10;anchor: align;" value="Day Selected : "></a-text>
+      <a-entity id="calendrier"hoverable position="-1.05 2.06 -3" scale="0.5 0.5 0.5">
+        <a-text id="textJour" position="-2.9 0.25 0" value="Day Selected : "
+                text="whiteSpace: pre;
+                      tabSize: 0; width: 2.5;
+                      baseline: top; wrapCount: 12;
+                      letterSpacing: 0.3"></a-text>
+        <a-entity geometry="width: 7; height: 4; depth: 0.5"
+                  position="0.24 -1.47 -0.3"
+                  material="color: white;"></a-entity>
         <!-- 1re rangée -->
         <a-entity class="choixJour" data-jour="1" mixin="btnCal" material="src:#t_1;">
           <a-animation mixin="fade"></a-animation>
